--- a/templates/polls/detail.html
+++ b/templates/polls/detail.html
@@ -5,16 +5,15 @@
     <title>问卷详情</title>
 </head>
 <body>
-<h1>{{ question.question_text }}</h1>>
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>
-{% endif %}
+<h1>{{ question.question_text }}</h1>
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 <form action="{% url 'polls:vote' question.id %}" method="post">
-    {% csrf_token %}
-    {% for choice in question.choise_set.all %}
+{% csrf_token %}
+{% for choice in question.choice_set.all %}
     <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
     <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
 <br />
-    {% endfor %}
+{% endfor %}
 <input type="submit" value="提交">
 </form>
 </body>
