--- a/templates/polls/header.html
+++ b/templates/polls/header.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <div class="well">
-        <h1 style="font-family:微软雅黑;">欢迎光临文学天地</h1>
+        <h1 style="font-family:微软雅黑;">欢迎光临</h1>
     </br>
         {% if hour < 6 %}
             早安
