--- a/templates/memory.html
+++ b/templates/memory.html
@@ -11,7 +11,7 @@
         var maxmemory = document.getElementById("maxmemory").value;
         var redis_type = '{{ redis_type }}';
         var insname = '{{ insname }}';
-        window.location.href="http://127.0.0.1:8000/polls/apis/redis-ins/" + redis_type + "/" + insname + "/" + maxmemory
+        window.location.href="/polls/apis/redis-ins/" + redis_type + "/" + insname + "/" + maxmemory
     }
   </script>
 </head>
