--- a/templates/memory.html
+++ b/templates/memory.html
@@ -11,6 +11,11 @@
         var maxmemory = document.getElementById("maxmemory").value;
         var redis_type = '{{ redis_type }}';
         var insname = '{{ insname }}';
+        if(maxmemory==="")
+            {
+                alert("请填写申请容量大小，例如1024m");
+                return false;
+            }
         window.location.href="/polls/apis/redis-ins/" + redis_type + "/" + insname + "/" + maxmemory
     }
   </script>
@@ -31,8 +36,8 @@
             </div>
             <form name="redis_ins_form" id="form_data" method="get">
             <div class="modal-body">
-                申请容量: <input type="text" id="maxmemory" name="maxmemory"/>
-                申请原因: <input type="text" id="apply_reason" name="apply_reason"/>
+                申请容量: <input type="text" id="maxmemory" required name="maxmemory"/>
+                申请原因: <input type="text" id="apply_reason" required name="apply_reason"/>
                 <input type="hidden" id="act" value="add" name="act"/>
             </div>
             <div class="modal-footer">
